--- a/styles/abstracts/_mixins.scss
+++ b/styles/abstracts/_mixins.scss
@@ -46,7 +46,7 @@
 @mixin gridMixin($gap: 1rem) {
     display: grid;
     grid-template-columns: repeat(12, 1fr);
-    gap: $rem;
+    gap: $gap;
 }
 
 @mixin absolute($top: 50%, $left: 50%) {
@@ -54,6 +54,16 @@
     top: $top;
     left: $left;
     transform: translate(-50% ,-50%);
+}
+
+@mixin filtreBlack() {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.304);
 }
 
 @mixin lien() {
