--- a/styles/layout/_header.scss
+++ b/styles/layout/_header.scss
@@ -1,5 +1,43 @@
 @use '../abstracts' as *;
 
-
-
+.header-section1{
+    border-bottom: 1px solid $gris;
+    .logo{
+        padding: 4rem 1rem;
+        img{
+            width: 200px;
+        }
+    }
+}
+.header-section2{
+    padding: 0.5rem 1rem;
+    .nav{
+        display: none;
+    }
+    .nav-search{
+        display: none;
+    }
+    .navbouton{
+        .nav-bouton{
+            display: inline-block;
+            background-color: red;
+            padding: 10px 1.5rem;
+            border-radius: 5px;
+            color: $blanc;
+            .nav-img{
+                display: inline-block;
+                padding-right: 4px;
+                img{
+                    width: 20px;
+                    filter: invert(1);
+                }
+            }
+            .nav-menu-burger{
+                display: inline-block;
+                font-size: $gText;
+                font-weight: 500;
+            }
+        }
+    }
+}
 
